<resources>
    <string name="app_name">BlaBlaCat</string>
    <string name="app_slogan">Поможем найти твою следующую поездку</string>
    <string name="no_connection">Нет подключения к интернету</string>
    <string name="no_connection_message">Проверьте подключение и повторите попытку</string>
    <string name="retry">Повторить попытку</string>
    <string name="skip">Пропустить</string>
    <string name="next">Далее</string>
    <string name="slide1_title">Аренда автомобилей</string>
    <string name="slide1_desc">Открой для себя удобный и доступный способ передвижения </string>
    <string name="slide2_title">Безопасно и удобно</string>
    <string name="slide2_desc">Арендуй автомобиль и наслаждайся его удобством</string>
    <string name="slide3_title">Лучшие предложения</string>
    <string name="slide3_desc">Выбирай понравившееся среди сотен доступных автомобилей</string>
    <string name="slide">slide</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Введите электронную почту</string>
    <string name="prompt_password">Введите пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_up">Зарегистрироваться</string>
    <string name="title_sign">Войдите в аккаунт</string>
    <string name="text_sign">Пожалуйста, введите свои данные</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="no_acc">Нет аккаунта? Зарегистрироваться</string>
    <string name="google">Войти через Google</string>
    <string name="back">Назад</string>
    <string name="agree_terms">Я согласен с условиями обслуживания и политикой конфиденциальности</string>
    <string name="prompt_create_email">Введите электронную почту</string>
    <string name="prompt_create_password">Придумайте пароль</string>
    <string name="prompt_confirm_password">Повторите пароль</string>
    <string name="create_acc">Создать аккаунт</string>
    <string name="prompt_last_name">Введите фамилию</string>
    <string name="prompt_first_name">Введите имя</string>
    <string name="prompt_middle_name">Введите отчество</string>
    <string name="prompt_date_of_birth">ДД/ММ/ГГГГ</string>
    <string name="prompt_gender">Пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="lastname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="middlename">Отчество</string>
    <string name="datebirth">Дата рождения</string>
    <string name="cat">Кот</string>
    <string name="prompt_drivers_license">Номер водительского удостоверения</string>
    <string name="prompt_issuance_date">Дата выдачи</string>
    <string name="upload_drivers_license_photo">Загрузить фото водительского удостоверения</string>
    <string name="upload_passport_photo">Загрузить фото паспорта</string>
    <string name="profile_photo">Фото профиля</string>
    <string name="add_photo">Добавление фотографии поможет владельцам и арендаторам узнать друг друга, когда они будут забирать машину</string>
    <string name="license">0000000000</string>
    <string name="glavniy">Да, я главный</string>
    <string name="registration_success_message">Поздравляем! Вы успешно зарегистрировались.</string>
    <string name="processing_time_message">Обработка ваших персональных данных займет около двух часов. Спасибо за ожидание.</string>
    <string name="congrats">Пользуйтесь с удовольствием</string>
    <string name="google_sign_in">Вход через Google в разработке</string>
    <string name="valid_email">Введите корректный email</string>
    <string name="minimum_six">Пароль должен содержать минимум 6 символов</string>
    <string name="empty">Это поле не может быть пустым</string>
    <string name="lucky">Успешный вход</string>
    <string name="valid_password">Пароли не совпадают</string>
    <string name="confid">Необходимо согласиться с условиями обслуживания и политикой конфиденциальности</string>
    <string name="empty_all">Пожалуйста, заполните все обязательные поля.</string>
    <string name="correct_birth">Введите корректную дату рождения.</string>
    <string name="y_old">Вам должно быть не менее 18 лет.</string>
    <string name="y_sex">Пожалуйста, выберите пол.</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="booking">Мои бронирования</string>
    <string name="theme">Тема</string>
    <string name="notification">Уведомления</string>
    <string name="add_car">Подключить автомобиль</string>
    <string name="help">Помощь</string>
    <string name="invite">Пригласить друга</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_on">Включить уведомления</string>
    <string name="test_not">Отправить тестовое уведомление</string>
    <string name="email_exist">Этот email уже зарегистрирован</string>
    <string name="light">Светлая тема</string>
    <string name="dark">Тёмная тема</string>
    <string name="home">Главная</string>
    <string name="Favorites">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="logout">Выйти из профиля</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="change_password">Изменить пароль</string>
    <string name="do_change">Хотите изменить пароль?</string>
    <string name="details">Детали</string>
    <string name="to_bron">Забронировать</string>
    <string name="input_car">Введите марку автомобиля</string>
    <string name="try_again">Повторить</string>
    <string name="nodata">Не удалось загрузить данные. Попробуйте снова.</string>
</resources>