<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <!-- Блок профиля -->
    <LinearLayout
        android:id="@+id/profileSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/userAvatar"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/profile_pic"
            android:scaleType="centerCrop"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_semibold"/>

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:fontFamily="@font/montserrat_regular"/>
        </LinearLayout>
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/menuBookings"
        style="@style/SettingsMenuItem"
        android:text="@string/booking"
        app:icon="@drawable/booking" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menuTheme"
        style="@style/SettingsMenuItem"
        app:icon="@drawable/theme"
        android:text="@string/theme"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menuNotifications"
        style="@style/SettingsMenuItem"
        app:icon="@drawable/notification"
        android:text="@string/notification"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menuConnectCar"
        style="@style/SettingsMenuItem"
        app:icon="@drawable/addcar"
        android:text="@string/add_car"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menuHelp"
        style="@style/SettingsMenuItem"
        app:icon="@drawable/help"
        android:text="@string/help"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menuInviteFriend"
        style="@style/SettingsMenuItem"
        app:icon="@drawable/invite"
        android:text="@string/invite"
        />
</LinearLayout>
