<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="40dp"
    android:paddingVertical="80dp"
    tools:context=".UploadDocumentsActivity">

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="@string/back"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_acc"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="26sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/buttonBack"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/imageViewProfilePhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/profile_pic"
        android:contentDescription="@string/profile_photo"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/textTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="10dp"/>

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="13sp"
        android:text="@string/add_photo"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewProfilePhoto"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/number"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="16sp"
        android:text="@string/prompt_drivers_license"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDriversLicense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/license"
        app:layout_constraintTop_toBottomOf="@id/number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDriversLicense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/date"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="16sp"
        android:text="@string/prompt_issuance_date"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutDriversLicense"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutIssuanceDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_date_of_birth"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextIssuanceDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="false"
                android:clickable="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonUploadDriversLicensePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_drivers_license_photo"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutIssuanceDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/gray"
        app:cornerRadius="8dp"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginVertical="10dp"
        app:icon="@drawable/upload"
        app:iconTint="@color/violet"
        android:backgroundTint="@color/white"
        app:strokeWidth="0dp"
        app:iconSize="30dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonUploadPassportPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_passport_photo"
        app:layout_constraintTop_toBottomOf="@id/buttonUploadDriversLicensePhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/white"
        android:textColor="@color/gray"
        app:cornerRadius="8dp"
        android:fontFamily="@font/montserrat_regular"
        app:icon="@drawable/upload"
        app:iconTint="@color/violet"
        app:strokeWidth="0dp"
        app:iconSize="30dp"/>
    <Button
        android:id="@+id/buttonNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:background="@drawable/button_ripple"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/buttonUploadPassportPhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:enabled="false" />

</androidx.constraintlayout.widget.ConstraintLayout>